# pepv

./: .clang-format  .gitignore  CMakeLists.txt  README.md  events.cpp  events.hpp  main.cpp  meson.build  meson.options  pepv.ui  pkgs.cpp  pkgs.hpp  utils.cpp  utils.hpp
.github/workflows/: build.yml
data/: pepv.desktop  pepv.ui
src/: events.cpp  events.hpp  main.cpp  pkgs.cpp  pkgs.hpp  utils.cpp  utils.hpp
subprojects/: tracy.wrap
